2002-07-11  Jeffrey Stedfast  <fejj@ximian.com>

	* configure.in: Bumped version to 1.0.3

	* README: Updated.

2002-07-11  Jeffrey Stedfast  <fejj@ximian.com>

	* gmime-utils.c (g_string_append_len): Updated the usage of
	strlcpy to match the new API (which was updated to match the
	Solaris strlcpy API).

	* gmime-param.c (g_string_append_len): Same.

	* strlib.c (strlcpy): Changed to behave the same as the Solaris
	strlcpy function.
	(strlcat): Changed to behave the same as the Solaris strlcat
	function.

2002-07-04  Jeffrey Stedfast  <fejj@ximian.com>

	* gmime-iconv-utils.c (g_mime_iconv_strndup): Fix for
	nul-terminating some multibyte charsets.

2002-06-25  Jeffrey Stedfast  <fejj@ximian.com>

	* configure.in: Bumped version to 1.0.2

	* README: Updated.

	* gmime-param.c (g_string_append_len_quoted): Append length as
	advertised rather than appending the whole string. Oops.

2002-06-15  Jeffrey Stedfast  <fejj@ximian.com>

	* configure.in: Bumped version to 1.0.1

	* README: Updated.

	* gmime-parser.c (parser_scan_mime_part_content): Use
	g_mime_stream_mem_new_with_byte_array() so that the mem stream
	owns the byte array so we don't leak.

2002-06-12  Jeffrey Stedfast  <fejj@ximian.com>

	* configure.in: Bumped version to 1.0.0

	* README: Updated.

2002-06-12  Jeffrey Stedfast  <fejj@ximian.com>

	* gen-table.c: Updated.

	* gmime-utils.c (quoted_decode): Oops. ESPECIALs are allowed
	inside of the encoded-text section of the encoded-word.

2002-06-11  Jeffrey Stedfast  <fejj@ximian.com>

	* gmime-parser.c (parser_scan_mime_part_content): If the parser
	stream is not seekable, then scan the content into a memory
	stream.

2002-05-23  Jeffrey Stedfast  <fejj@ximian.com>

	* doc/*: Updated documentation.

	* gmime-stream.c (g_mime_stream_writev): Return -1 on fail.

2002-05-16  Jeffrey Stedfast  <fejj@ximian.com>

	* gmime-parser.c (parser_scan_mime_part_content): Only compensate
	for the '\n' if we found a boundary.
