@@ -1,4 +1,4 @@
-                            GMime, version 1.0.3
+                            GMime, version 1.0.4
                    by Jeffrey Stedfast <fejj@helixcode.com>
 
 
